# model-context-protocol-todo-example

./: .gitignore  README.md
chat_service/: .env.example  Dockerfile  Makefile  mcp_client.py  pyproject.toml  requirements.txt
todo_mcp_service/: Dockerfile  Makefile  mcp_server.py  pyproject.toml
todo_mcp_service_nodejs/: package-lock.json  package.json
todo_mcp_service_nodejs/src/server/: mcpServer.ts  toolRegistry.ts
todo_service/: Dockerfile  Makefile  api_server.py  pyproject.toml
