[tool.poetry]
name = "todo-mcp-service"
version = "0.1.0"
description = ""
authors = ["Durgesh Rathod <durgesh.rathod@sourcefuse.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
mcp = {extras = ["cli"], version = "^1.9.2"}
httpx = "^0.28.1"
uvicorn = "^0.34.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
