[tool.poetry]
name = "todo-service"
version = "0.1.0"
description = ""
authors = ["Durgesh Rathod <durgesh.rathod@sourcefuse.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
